fixes background shift on open mmenu

--- a/curatescape/css/screen.css
+++ b/curatescape/css/screen.css
@@ -14,6 +14,10 @@ body{
 	background-size: cover;
 	background-attachment: fixed;
 }
+/*fixes background shift on open mmenu*/
+html.mm-background .mm-page{
+	background: unset;
+}
 /* fix for fixed-cover background sizing on "mobile" */
 /* imperfect and limited compatibility but not mission-critical */
 @media (pointer:coarse){
